Selected templates are now used when rendering Pagecontroller#show
Also:
- Automatic template selection based on page and page ancestors' slugs.
- Template is locked (so it won't be auto-selected) when user selects it manually.
- Fixed some JS problems... by completely removing JS addition/removal of tabs. Yippie!
- Use Page.default_parts (defined as RefinerySetting) when no template is available for a page.

Pending:
- Documentation
- Tests
- Refactor Extensions so they're neater
- Fina a way to avoid overriding PagesController
- Gemify

--- a/app/views/admin/page_templates/_page_template.html.haml
+++ b/app/views/admin/page_templates/_page_template.html.haml
@@ -27,8 +27,13 @@
                 = v
                 %br
     %p
-      %strong Asignada a:
-      - if page_template.pages.empty?
+      %strong Asignada manualmente a:
+      - if page_template.manually_assigned_pages.empty?
         Ninguna página
-      - page_template.pages.each do |page|
+      - page_template.manually_assigned_pages.each do |page|
         = link_to page.title, edit_admin_page_path(page)
+      %strong Asignada automáticamente a:
+      - if page_template.auto_assigned_pages.empty?
+        Ninguna página
+      - page_template.auto_assigned_pages.each do |page|
+        = link_to page.title, edit_admin_page_path(page)        
