--- a/app/views/admin/page_templates/_page_templates.html.haml
+++ b/app/views/admin/page_templates/_page_templates.html.haml
@@ -1,2 +1,5 @@
+/ %h1 PageTemplates
+/ %p PageTemplates disponibles en el sistema:
+%hr
 = will_paginate @page_templates
 = render :partial => 'page_template', :collection => @page_templates
